🐍 Kill Shot: 80% off everything forever — Mall v2.0
- mall.html: Full 20-product marketplace with kill shot pricing
- SERLF-KILL-SHOT.md: Complete spec, crew architecture, economics
- 80% off cheapest competitor, $1 floor, $25 All-In Pass
- Specialist-as-Product model: AI agent IS the product
- feedles.ca: 10% of revenue to food insecurity
- NPs: 121-125 (Kill Shot, Specialist-as-Product, Revenue-to-Impact, Mall Pass, Crew Cascade)

--- a/ai-garage.html
+++ b/ai-garage.html
@@ -23,7 +23,10 @@
 <p class="tagline">Your personal AI mechanic shop. We fix, tune, and build custom AI models that actually work.</p>
 <div class="price">$1<span>/mo</span></div>
 <p style="color:var(--fg2);margin:1rem 0">Premium AI model services at basement prices. No PhD required.</p>
-<a href="/login.html" class="btn btn-gold">Join the Garage - $1/mo</a>
+<div style="display:flex;gap:1rem;justify-content:center;flex-wrap:wrap">
+<a href="/marketplace.html" class="btn btn-gold">🛒 Add to Cart - $1/mo</a>
+<a href="#features" class="btn btn-secondary">👀 Browse Features</a>
+</div>
 </section>
 
 <section>
