--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 </div>
 
 <div class="store-grid">
-<div class="card"><div class="icon">🚗</div><h3>The AI Garage</h3><p>Custom AI models, fine-tuning, training data. Your personal AI mechanic shop.</p></div>
-<div class="card"><div class="icon">🤖</div><h3>The Bot Builder</h3><p>Chatbots, Discord bots, automation agents. If it talks, we build it.</p></div>
+<div class="card"><div class="icon">🚗</div><h3><a href="/ai-garage.html">The AI Garage</a></h3><p>Custom AI models, fine-tuning, training data. Your personal AI mechanic shop.</p></div>
+<div class="card"><div class="icon">🤖</div><h3><a href="/bot-builder.html">The Bot Builder</a></h3><p>Chatbots, Discord bots, automation agents. If it talks, we build it.</p></div>
 <div class="card"><div class="icon">💭</div><h3>The Prompt Studio</h3><p>Prompt templates, chains, optimization. Turn words into magic.</p></div>
-<div class="card"><div class="icon">🏦</div><h3>The Token Bank</h3><p>API key management, cost optimization, smart routing. Your AI budget's best friend.</p></div>
+<div class="card"><div class="icon">🏦</div><h3><a href="/token-bank.html">The Token Bank</a></h3><p>API key management, cost optimization, smart routing. Your AI budget's best friend.</p></div>
 <div class="card"><div class="icon">🎨</div><h3>The Neural Cafe</h3><p>AI art, music, voice synthesis, creative AI. Where imagination meets silicon.</p></div>
 </div>
 </div>
@@ -201,7 +201,7 @@
 </div>
 
 <div class="store-grid">
-<div class="card"><div class="icon">🖌️</div><h3>The Design Den</h3><p>Logos, websites, graphics, brand kits. Make it beautiful.</p></div>
+<div class="card"><div class="icon">🖌️</div><h3><a href="/design-den.html">The Design Den</a></h3><p>Logos, websites, graphics, brand kits. Make it beautiful.</p></div>
 <div class="card"><div class="icon">🏰</div><h3>The Content Castle</h3><p>Blog posts, videos, podcasts, scripts. Content is king here.</p></div>
 <div class="card"><div class="icon">📸</div><h3>The Photo Booth</h3><p>Image editing, photo enhancement, filters. Picture perfect every time.</p></div>
 <div class="card"><div class="icon">🎬</div><h3>The Video Vault</h3><p>Video editing, animations, motion graphics. Lights, camera, action!</p></div>
