--- a/token-bank.html
+++ b/token-bank.html
@@ -25,7 +25,10 @@
 <div class="savings-badge">Save up to 87% on AI costs</div>
 <div class="price">$1<span>/mo</span></div>
 <p style="color:var(--fg2);margin:1rem 0">The router that pays for itself in the first hour.</p>
-<a href="/login.html" class="btn btn-gold">Start Saving - $1/mo</a>
+<div style="display:flex;gap:1rem;justify-content:center;flex-wrap:wrap">
+<a href="/marketplace.html" class="btn btn-gold">🛒 Add to Cart - $1/mo</a>
+<a href="#features" class="btn btn-secondary">👀 Browse Features</a>
+</div>
 </section>
 
 <section>
