--- a/org/index.html
+++ b/org/index.html
@@ -2,60 +2,119 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>serlf — Built by Friends, for Everyone</title>
-<meta name="description" content="serlf open source. The community center. Built by friends, for everyone. Come help us make it better.">
-<link rel="stylesheet" href="../styles.css">
+<title>feedles — No Meek Is Immune | Fighting Food Insecurity</title>
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+:root{--bg:#0a1a0a;--bg2:#0d200d;--bg3:#143014;--fg:#e8f5e8;--fg2:#7aaa7a;--accent:#3fb950;--gold:#ffd700;--border:#1a3a1a}
+body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:var(--bg);color:var(--fg);min-height:100vh}
+.container{max-width:800px;margin:0 auto;padding:40px 20px}
+.hero{text-align:center;padding:60px 0}
+.hero .icon{font-size:5rem;margin-bottom:20px}
+h1{font-size:3.5rem;font-weight:900;color:var(--accent)}
+.sub{font-size:1.3rem;color:var(--fg2);margin:16px 0 40px;max-width:600px;margin-left:auto;margin-right:auto}
+.mission{background:var(--bg2);border:1px solid var(--border);border-radius:12px;padding:32px;margin:32px 0}
+.mission h2{color:var(--accent);margin-bottom:12px;font-size:1.5rem}
+.mission p{color:var(--fg2);line-height:1.8}
+.pillars{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin:32px 0}
+.pillar{background:var(--bg2);border:1px solid var(--border);border-radius:10px;padding:20px;text-align:center}
+.pillar .icon{font-size:2.5rem;margin-bottom:8px}
+.pillar h3{margin-bottom:4px}
+.pillar p{font-size:0.85rem;color:var(--fg2)}
+.stats{display:flex;gap:32px;justify-content:center;flex-wrap:wrap;margin:40px 0}
+.stat{text-align:center}
+.stat .num{font-size:2.5rem;font-weight:900;color:var(--accent)}
+.stat .label{font-size:0.85rem;color:var(--fg2)}
+.how{background:var(--bg3);border-radius:12px;padding:32px;margin:32px 0;text-align:center}
+.how h2{color:var(--gold);margin-bottom:16px}
+.flow{display:flex;gap:16px;justify-content:center;flex-wrap:wrap;align-items:center}
+.flow-step{background:var(--bg2);border:1px solid var(--border);border-radius:8px;padding:12px 16px;min-width:140px}
+.flow-step .icon{font-size:1.5rem}
+.flow-step .text{font-size:0.85rem;color:var(--fg2);margin-top:4px}
+.flow-arrow{font-size:1.5rem;color:var(--fg2)}
+.cta{display:inline-block;padding:16px 40px;background:var(--accent);color:#000;border-radius:10px;font-size:1.2rem;font-weight:800;margin:32px 0;text-decoration:none}
+.quote{font-style:italic;color:var(--fg2);font-size:1.2rem;text-align:center;margin:40px 0;padding:20px;border-left:3px solid var(--accent)}
+footer{text-align:center;margin-top:60px;color:var(--fg2);font-size:0.85rem;padding-bottom:40px}
+footer a{color:var(--accent)}
+</style>
 </head>
 <body>
-<header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Community Center</span></div>
-<nav>
-<a href="/">Home</a>
-</nav>
-</div></header>
-
-<section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🇨🇦 The Community Center</p>
-<h1>Built by friends,<br>for everyone.</h1>
-<p class="tagline">We figured out some useful things building this mall, so we're sharing them. Because that's what good neighbors do.</p>
-<div class="flex-center mt-2">
-<a href="https://github.com/eose-sre/serlf" class="btn btn-gold" target="_blank">📋 See It on GitHub</a>
-<a href="/" class="btn btn-secondary">🏠 Back to the Mall</a>
-</div>
-</section>
-
-<section style="background:var(--bg2)">
 <div class="container">
-<h2 class="section-title">Why We Share</h2>
-<p class="section-sub">Good ideas should be for everyone. That's the whole point.</p>
-<div class="grid grid-2" style="max-width:800px;margin:0 auto">
-<div class="card">
-<h3>🌱 Open Source?</h3>
-<p>While building this, we discovered 32+ clever patterns. They belong to everyone, not just us. A good neighbor shares their tools.</p>
-</div>
-<div class="card">
-<h3>🤝 Come Help Us Make It Better</h3>
-<p>See something that could be improved? Have an idea? Jump in! The community board is open and everyone's welcome.</p>
-</div>
-</div>
-</div>
-</section>
 
-<section>
-<div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">"Good tools for good people." — That's the open source way.</p>
-<p style="color:var(--fg2);max-width:600px;margin:0 auto 2rem">32+ patterns. All documented. All free. Come take a look, and if you have something to add, we'd love to hear it.</p>
-<a href="https://github.com/eose-sre/serlf" class="btn btn-gold" target="_blank">View on GitHub</a>
+<div class="hero">
+  <div class="icon">🍽️</div>
+  <h1>feedles</h1>
+  <p class="sub">No meek is immune. Fighting food insecurity with technology, community, and dignity.</p>
 </div>
-</section>
 
-<footer class="site-footer"><div class="footer-inner">
-<div class="footer-links">
-<a href="/">Home</a>
-<a href="/crew.html">Crew</a>
-<a href="/vision.html">Our Story</a>
+<div class="mission">
+  <h2>🌱 The Mission</h2>
+  <p>Food insecurity doesn't discriminate. It touches families, students, seniors, workers — anyone can be one bad month away from not knowing where their next meal comes from. feedles exists to bridge the gap between surplus and need, using AI to match food resources with the people who need them most.</p>
 </div>
-<div class="footer-bottom">⚓🧭 serlf · Community Center · 🇨🇦 Canada<br><em>"Built by friends, for everyone."</em></div>
-</div></footer>
+
+<div class="pillars">
+  <div class="pillar">
+    <div class="icon">📍</div>
+    <h3>Food Bank Finder</h3>
+    <p>Locate the nearest food assistance — banks, pantries, community fridges, hot meals. Real-time availability.</p>
+  </div>
+  <div class="pillar">
+    <div class="icon">🔄</div>
+    <h3>Surplus Matching</h3>
+    <p>Restaurants and groceries with excess food → shelters and families who need it. AI-optimized logistics.</p>
+  </div>
+  <div class="pillar">
+    <div class="icon">🌿</div>
+    <h3>Community Gardens</h3>
+    <p>Map of community gardens, shared plots, seed libraries. Grow your own, share the surplus.</p>
+  </div>
+  <div class="pillar">
+    <div class="icon">🍳</div>
+    <h3>Budget Meals</h3>
+    <p>AI-powered meal planning for tight budgets. Nutrition-aware, allergen-safe, culturally diverse recipes.</p>
+  </div>
+</div>
+
+<div class="how">
+  <h2>How It's Funded</h2>
+  <div class="flow">
+    <div class="flow-step"><div class="icon">🏬</div><div class="text">serlf Mall<br>revenue</div></div>
+    <div class="flow-arrow">→</div>
+    <div class="flow-step"><div class="icon">💰</div><div class="text">10% auto<br>allocated</div></div>
+    <div class="flow-arrow">→</div>
+    <div class="flow-step"><div class="icon">🍽️</div><div class="text">feedles.ca<br>operations</div></div>
+    <div class="flow-arrow">→</div>
+    <div class="flow-step"><div class="icon">❤️</div><div class="text">Food on<br>tables</div></div>
+  </div>
+  <p style="color:var(--fg2);margin-top:16px;font-size:0.9rem">Not charity. Not an afterthought. Baked into the business model from day one.</p>
+</div>
+
+<div class="quote">
+  "The meek feed the meek. That's the whole point."
+</div>
+
+<div class="stats">
+  <div class="stat"><div class="num">10%</div><div class="label">of all serlf revenue</div></div>
+  <div class="stat"><div class="num">$0</div><div class="label">cost to users in need</div></div>
+  <div class="stat"><div class="num">🇨🇦</div><div class="label">starting in Canada</div></div>
+  <div class="stat"><div class="num">∞</div><div class="label">meek to feed</div></div>
+</div>
+
+<div style="text-align:center">
+  <a href="https://feedles.ca" class="cta">Visit feedles.ca →</a>
+  <br>
+  <a href="https://serlf.ca/mall.html" style="color:var(--fg2)">Every purchase at serlf.ca helps fund feedles</a>
+</div>
+
+<div class="mission" style="margin-top:40px">
+  <h2>🤝 Open Source</h2>
+  <p>feedles is fully open source. The food bank finder, the surplus matching algorithm, the community garden map — all of it. Because solving food insecurity shouldn't be proprietary. Fork it. Improve it. Deploy it in your city. The more instances, the more people fed.</p>
+  <p style="margin-top:12px"><a href="https://github.com/eose-sre" style="color:var(--accent)">github.com/eose-sre</a></p>
+</div>
+
+<footer>
+  <p>🍽️ feedles — a <a href="https://serlf.ca">serlf</a> initiative | <a href="https://github.com/eose-sre">Open Source</a> | No meek is immune 🧭</p>
+</footer>
+
+</div>
 </body>
 </html>
