--- a/shop/index.html
+++ b/shop/index.html
@@ -2,50 +2,79 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>serlf — The Gift Shop · Take Something Home</title>
-<meta name="description" content="serlf merch and gear. Hoodies, stickers, and fun stuff. Take something home from the mall.">
-<link rel="stylesheet" href="../styles.css">
+<title>serlf.shop — Quick Buy | Get Your Specialist in 60 Seconds</title>
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+:root{--bg:#0a0e14;--bg2:#131820;--bg3:#1a2030;--fg:#e8ecf1;--fg2:#7a8599;--accent:#58a6ff;--gold:#ffd700;--green:#3fb950;--border:#252d3a}
+body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:var(--bg);color:var(--fg);min-height:100vh}
+.container{max-width:1000px;margin:0 auto;padding:40px 20px}
+.hero{text-align:center;padding:40px 0 20px}
+h1{font-size:2.5rem;font-weight:900}
+h1 .gold{color:var(--gold)}
+.sub{color:var(--fg2);margin:8px 0 32px}
+.products{display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:12px}
+.item{background:var(--bg2);border:1px solid var(--border);border-radius:10px;padding:16px;text-align:center;cursor:pointer;transition:all 0.2s}
+.item:hover{border-color:var(--gold);transform:translateY(-2px)}
+.item .icon{font-size:2rem;margin-bottom:6px}
+.item h3{font-size:0.95rem;margin-bottom:4px}
+.item .price{color:var(--gold);font-weight:900;font-size:1.3rem}
+.item .old{color:var(--fg2);text-decoration:line-through;font-size:0.8rem}
+.item .tag{display:inline-block;background:var(--green);color:#000;font-size:0.65rem;font-weight:700;padding:2px 6px;border-radius:3px;margin-top:6px}
+.bundles-row{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin:32px 0}
+.bundle{background:var(--bg2);border:2px solid var(--border);border-radius:12px;padding:20px;text-align:center}
+.bundle.hot{border-color:var(--gold);background:linear-gradient(180deg,rgba(255,215,0,0.05),var(--bg2))}
+.bundle h3{margin-bottom:4px}
+.bundle .price{font-size:2rem;font-weight:900;color:var(--gold)}
+.bundle .price span{font-size:0.8rem;color:var(--fg2)}
+.bundle .desc{color:var(--fg2);font-size:0.85rem;margin:8px 0}
+.bundle .btn{display:block;padding:10px;background:var(--gold);color:#000;border:none;border-radius:6px;font-weight:700;cursor:pointer;text-decoration:none;margin-top:12px}
+.bundle .btn.outline{background:none;border:1px solid var(--border);color:var(--fg)}
+footer{text-align:center;margin-top:40px;color:var(--fg2);font-size:0.85rem}
+footer a{color:var(--accent)}
+</style>
 </head>
 <body>
-<header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Gift Shop</span></div>
-<nav>
-<a href="/">Home</a>
-</nav>
-</div></header>
-
-<section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🎁 The Gift Shop</p>
-<h1>Take something home.</h1>
-<p class="tagline">Hoodies, stickers, and fun gear. Like the souvenir shop at the end of the mall — but cooler. 😎</p>
-<div class="flex-center mt-2">
-<a href="/" class="btn btn-gold">🏠 Back to the Mall</a>
-</div>
-</section>
-
-<section>
 <div class="container">
-<h2 class="section-title">Coming Soon 🎉</h2>
-<div class="grid grid-3">
-<div class="card" style="text-align:center"><div style="font-size:3rem">👕</div><h3>"serlf" Hoodie</h3><p>Navy dark. Comfy. The kind of hoodie you'd live in. Canadian-made quality.</p><div class="tag">COMING SOON</div></div>
-<div class="card" style="text-align:center"><div style="font-size:3rem">⚓🧭</div><h3>Sticker Pack</h3><p>Captain + m1 stickers. Perfect for laptops, water bottles, and notebook covers.</p><div class="tag">COMING SOON</div></div>
-<div class="card" style="text-align:center"><div style="font-size:3rem">🍁</div><h3>"Friendly Mall" Tee</h3><p>Soft cotton. Warm vibes. Wear the feeling.</p><div class="tag">COMING SOON</div></div>
-</div>
-</div>
-</section>
 
-<section style="background:var(--bg2)">
-<div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the serlf mall — browse everything for free</p>
-<a href="/" class="btn btn-gold">Back to the Mall</a>
+<div class="hero">
+  <h1>🛒 Quick <span class="gold">Shop</span></h1>
+  <p class="sub">Pick. Pay. Your specialist is live in 60 seconds.</p>
 </div>
-</section>
 
-<footer class="site-footer"><div class="footer-inner">
-<div class="footer-links">
-<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Our Story</a>
+<div class="products">
+  <div class="item"><div class="icon">💬</div><h3>AI Chat</h3><div class="old">$20/mo</div><div class="price">$4</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🌐</div><h3>Site Builder</h3><div class="old">$2.99/mo</div><div class="price">$1</div><div class="tag">FLOOR</div></div>
+  <div class="item"><div class="icon">🎨</div><h3>AI Images</h3><div class="old">$12/mo</div><div class="price">$2.40</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">✍️</div><h3>AI Writer</h3><div class="old">$16/mo</div><div class="price">$3.20</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">💻</div><h3>Code Pilot</h3><div class="old">$10/mo</div><div class="price">$2</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">📧</div><h3>Mail Engine</h3><div class="old">$13/mo</div><div class="price">$2.60</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🤝</div><h3>Deal Flow</h3><div class="old">$14/mo</div><div class="price">$2.80</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🎙️</div><h3>Voice Lab</h3><div class="old">$5/mo</div><div class="price">$1</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🖌️</div><h3>Design Studio</h3><div class="old">$13/mo</div><div class="price">$2.60</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">📊</div><h3>SEO Radar</h3><div class="old">$29/mo</div><div class="price">$5.80</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">☁️</div><h3>Cloud Dock</h3><div class="old">$20/mo</div><div class="price">$4</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🤖</div><h3>Bot Factory</h3><div class="old">$15/mo</div><div class="price">$3</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🎬</div><h3>Video Forge</h3><div class="old">$24/mo</div><div class="price">$4.80</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">📋</div><h3>Task Board</h3><div class="old">$7/mo</div><div class="price">$1.40</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🎧</div><h3>Help Desk</h3><div class="old">$15/mo</div><div class="price">$3</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🏦</div><h3>Token Bank</h3><div class="old">N/A</div><div class="price">$2</div><div class="tag">UNIQUE</div></div>
+  <div class="item"><div class="icon">🔧</div><h3>AI Garage</h3><div class="old">$20/mo</div><div class="price">$4</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🔒</div><h3>Data Vault</h3><div class="old">$7/mo</div><div class="price">$1.40</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">📝</div><h3>Form Flow</h3><div class="old">$25/mo</div><div class="price">$5</div><div class="tag">-80%</div></div>
+  <div class="item"><div class="icon">🔗</div><h3>Link Tree</h3><div class="old">$9/mo</div><div class="price">$1.80</div><div class="tag">-80%</div></div>
 </div>
-<div class="footer-bottom">⚓🧭 serlf · Gift Shop · 🇨🇦 Canada<br><em>"Take something home."</em></div>
-</div></footer>
+
+<div class="bundles-row">
+  <div class="bundle"><h3>🚪 Entry</h3><div class="price">$1<span>/mo</span></div><div class="desc">1 specialist</div><a href="/login.html" class="btn outline">Start</a></div>
+  <div class="bundle"><h3>⚡ Starter</h3><div class="price">$5<span>/mo</span></div><div class="desc">Any 5</div><a href="/login.html" class="btn outline">Pick 5</a></div>
+  <div class="bundle"><h3>🔨 Builder</h3><div class="price">$10<span>/mo</span></div><div class="desc">Any 10</div><a href="/login.html" class="btn outline">Pick 10</a></div>
+  <div class="bundle hot"><h3>👑 ALL-IN</h3><div class="price">$25<span>/mo</span></div><div class="desc">Everything. 90.5% off.</div><a href="/login.html" class="btn">Get Everything</a></div>
+</div>
+
+<footer>
+  <p>⚓ <a href="https://serlf.ca">serlf.ca</a> | <a href="https://serlf.ca/specialists.html">Try before you buy</a> | <a href="https://serlf.ca/mall.html">Browse the Mall</a> 🧭</p>
+</footer>
+
+</div>
 </body>
 </html>
