--- a/store/index.html
+++ b/store/index.html
@@ -2,50 +2,108 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>serlf — The Marketplace · Made by Our Community</title>
-<meta name="description" content="serlf digital marketplace. Templates, tools, and creations made by our community. For our community.">
-<link rel="stylesheet" href="../styles.css">
+<title>serlf.store — Token Bank | The Clutch | Save 87% on AI Costs</title>
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+:root{--bg:#0a0e14;--bg2:#131820;--bg3:#1a2030;--fg:#e8ecf1;--fg2:#7a8599;--accent:#58a6ff;--gold:#ffd700;--green:#3fb950;--red:#f85149;--border:#252d3a}
+body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:var(--bg);color:var(--fg);min-height:100vh}
+.container{max-width:800px;margin:0 auto;padding:40px 20px}
+.hero{text-align:center;padding:60px 0 40px}
+h1{font-size:3rem;font-weight:900}
+h1 .gold{color:var(--gold)}
+h1 .green{color:var(--green)}
+.sub{color:var(--fg2);font-size:1.2rem;margin:12px auto 0;max-width:600px}
+.gears{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin:40px 0}
+.gear{background:var(--bg2);border:1px solid var(--border);border-radius:10px;padding:16px;text-align:center}
+.gear .icon{font-size:2rem;margin-bottom:6px}
+.gear h3{font-size:0.9rem;margin-bottom:4px}
+.gear .cost{color:var(--green);font-weight:900;font-size:1.1rem}
+.gear .desc{font-size:0.75rem;color:var(--fg2);margin-top:4px}
+.gear.active{border-color:var(--green);background:rgba(63,185,80,0.05)}
+.calc{background:var(--bg2);border:2px solid var(--gold);border-radius:12px;padding:32px;margin:32px 0}
+.calc h2{color:var(--gold);margin-bottom:16px;text-align:center}
+.calc-row{display:flex;justify-content:space-between;align-items:center;padding:12px 0;border-bottom:1px solid var(--border)}
+.calc-row:last-child{border:none}
+.calc-row .label{color:var(--fg2)}
+.calc-row .value{font-weight:700;font-size:1.2rem}
+.calc-row .value.red{color:var(--red)}
+.calc-row .value.green{color:var(--green)}
+.calc-row .value.gold{color:var(--gold);font-size:1.5rem}
+.how{margin:40px 0}
+.how h2{text-align:center;margin-bottom:20px}
+.step{display:flex;gap:16px;margin:16px 0;align-items:flex-start}
+.step .num{background:var(--accent);color:#fff;width:32px;height:32px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-weight:900;flex-shrink:0}
+.step .text h3{margin-bottom:2px}
+.step .text p{color:var(--fg2);font-size:0.9rem}
+.cta{display:inline-block;padding:16px 40px;background:var(--gold);color:#000;border-radius:10px;font-size:1.2rem;font-weight:800;text-decoration:none;margin:24px 0}
+footer{text-align:center;margin-top:60px;color:var(--fg2);font-size:0.85rem}
+footer a{color:var(--accent)}
+@media(max-width:600px){.gears{grid-template-columns:repeat(2,1fr)}}
+</style>
 </head>
 <body>
-<header class="site-header"><div class="header-inner">
-<div class="logo">⚓🧭 serlf<span class="maple">🍁</span> <span style="font-size:.6em;color:var(--fg2)">Marketplace</span></div>
-<nav>
-<a href="/">Home</a>
-</nav>
-</div></header>
-
-<section class="hero">
-<p style="font-size:.9rem;color:var(--fg2);margin-bottom:1rem">🏪 The Marketplace</p>
-<h1>Made by our community,<br>for our community.</h1>
-<p class="tagline">Like the little pop-up shops at the mall — people making cool stuff and sharing it with everyone else.</p>
-<div class="flex-center mt-2">
-<a href="/" class="btn btn-gold">🏠 Back to the Mall</a>
-</div>
-</section>
-
-<section>
 <div class="container">
-<h2 class="section-title">What's Coming</h2>
-<div class="grid grid-3">
-<div class="card"><div class="icon">🤖</div><h3>Ready-Made Templates</h3><p>Pre-built AI helper templates. Tested and ready to go. Like buying a model kit instead of starting from scratch.</p><div class="tag">COMING SOON</div></div>
-<div class="card"><div class="icon">🏗️</div><h3>Practice Spaces</h3><p>Pre-configured learning environments. Safe spaces to try things out without breaking anything.</p><div class="tag">COMING SOON</div></div>
-<div class="card"><div class="icon">🌀</div><h3>Pattern Collections</h3><p>Deep-dive guides on our cleverest solutions. With full examples and step-by-step instructions.</p><div class="tag">COMING SOON</div></div>
-</div>
-</div>
-</section>
 
-<section style="background:var(--bg2)">
-<div class="container text-center" style="padding:3rem 0">
-<p style="color:var(--warm-gold);font-size:1.2rem;font-weight:600;margin-bottom:1rem">Part of the serlf mall — browse everything for free</p>
-<a href="/" class="btn btn-gold">Back to the Mall</a>
+<div class="hero">
+  <div style="font-size:4rem">🏦</div>
+  <h1>Token <span class="gold">Bank</span></h1>
+  <p class="sub">The Clutch — 4-gear AI model router. Save <span style="color:var(--green);font-weight:900">87%</span> on AI costs. $2/mo.</p>
 </div>
-</section>
 
-<footer class="site-footer"><div class="footer-inner">
-<div class="footer-links">
-<a href="/">Home</a><a href="/crew.html">Crew</a><a href="/vision.html">Our Story</a>
+<div class="gears">
+  <div class="gear active">
+    <div class="icon">⚡</div>
+    <h3>Idle</h3>
+    <div class="cost">FREE</div>
+    <div class="desc">Cerebras, Groq<br>Quick tasks, autocomplete</div>
+  </div>
+  <div class="gear">
+    <div class="icon">🔧</div>
+    <h3>Working</h3>
+    <div class="cost">$0.001</div>
+    <div class="desc">Gemini Flash<br>Standard work, analysis</div>
+  </div>
+  <div class="gear">
+    <div class="icon">🧠</div>
+    <h3>Thinking</h3>
+    <div class="cost">$0.01</div>
+    <div class="desc">Sonnet, Codex<br>Complex reasoning</div>
+  </div>
+  <div class="gear">
+    <div class="icon">🔥</div>
+    <h3>Critical</h3>
+    <div class="cost">$0.05</div>
+    <div class="desc">Opus, GPT-5<br>Maximum intelligence</div>
+  </div>
 </div>
-<div class="footer-bottom">⚓🧭 serlf · Marketplace · 🇨🇦 Canada<br><em>"Made by our community, for our community."</em></div>
-</div></footer>
+
+<p style="text-align:center;color:var(--fg2)">87% of requests resolve in Idle or Working. That's where the savings come from.</p>
+
+<div class="calc">
+  <h2>💰 Your Savings</h2>
+  <div class="calc-row"><span class="label">Typical AI spend (ChatGPT + Claude + APIs)</span><span class="value red">$200/mo</span></div>
+  <div class="calc-row"><span class="label">With The Clutch (same quality, smart routing)</span><span class="value green">$26/mo</span></div>
+  <div class="calc-row"><span class="label">Token Bank subscription</span><span class="value">$2/mo</span></div>
+  <div class="calc-row"><span class="label"><strong>You save</strong></span><span class="value gold">$172/mo</span></div>
+</div>
+
+<div class="how">
+  <h2>How The Clutch Works</h2>
+  <div class="step"><div class="num">1</div><div class="text"><h3>You send a message</h3><p>Any task — coding, writing, analysis, chat. You don't pick a model.</p></div></div>
+  <div class="step"><div class="num">2</div><div class="text"><h3>The Clutch analyzes complexity</h3><p>Is this a quick answer? Standard work? Complex reasoning? Critical decision?</p></div></div>
+  <div class="step"><div class="num">3</div><div class="text"><h3>Right model, right gear</h3><p>Free model for quick stuff. Premium only when the task truly needs it.</p></div></div>
+  <div class="step"><div class="num">4</div><div class="text"><h3>Smart reverse fallback</h3><p>If a cheaper model struggles, it automatically escalates. Quality never drops.</p></div></div>
+</div>
+
+<div style="text-align:center">
+  <a href="https://serlf.ca/specialists.html" class="cta">Talk to the Router Specialist →</a>
+  <p style="color:var(--fg2);margin-top:8px">Free test. $2/mo when you're ready. Saves $100s.</p>
+</div>
+
+<footer>
+  <p>🏦 Token Bank — part of the <a href="https://serlf.ca">serlf</a> ecosystem | <a href="https://serlf.ca/mall.html">All 20+ Products</a> 🧭</p>
+</footer>
+
+</div>
 </body>
 </html>
